--- a/style/main.css
+++ b/style/main.css
@@ -1,1 +1,184 @@
+/* Variables */
+body {
+  margin: 0px; }
+
+/* Header */
+#header-bar {
+  height: 60px;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 60px;
+  background: #F0F0F0;
+  border-bottom: 1px solid #D6D6D6;
+  z-index: 1; }
+
+#page-title {
+  font-size: 40px;
+  line-height: 50px;
+  font-weight: 600;
+  font-style: normal;
+  font-family: "nyt-franklin", arial, helvetica, sans-serif;
+  color: #000;
+  margin: 0; }
+
+nav {
+  display: flex;
+  align-items: center; }
+
+.nav-button {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 42px;
+  border-radius: 50%;
+  margin: 0 10px 0 10px; }
+
+.nav-button:hover {
+  width: 32px;
+  height: 32px;
+  line-height: 34px; }
+
+#vis-1-button {
+  background: #D6C171;
+  color: white; }
+
+#vis-1-button:visited {
+  background: #D6C171;
+  color: white; }
+
+#vis-1-button:hover {
+  background: #F0F0F0;
+  color: #D6C171;
+  border: 4px solid #D6C171; }
+
+#vis-2-button {
+  background: #A34846;
+  color: white; }
+
+#vis-2-button:visited {
+  background: #A34846;
+  color: white; }
+
+#vis-2-button:hover {
+  background: #F0F0F0;
+  color: #A34846;
+  border: 4px solid #A34846; }
+
+#vis-3-button {
+  background: #467DA3;
+  color: white; }
+
+#vis-3-button:visited {
+  background: #467DA3;
+  color: white; }
+
+#vis-3-button:hover {
+  background: #F0F0F0;
+  color: #467DA3;
+  border: 4px solid #467DA3; }
+
+a {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 300;
+  font-style: normal;
+  font-family: "nyt-franklin", arial, helvetica, sans-serif;
+  text-decoration: none; }
+
+/* Content */
+#content-container {
+  margin-top: 59px; }
+
+.plate {
+  width: 80%;
+  margin: 0 10% 60px 10%;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  border: 1px solid #D6D6D6;
+  }
+
+.section-title {
+  font-size: 40px;
+  line-height: 50px;
+  font-weight: 300;
+  font-style: normal;
+  font-family: "nyt-franklin", arial, helvetica, sans-serif;
+  color: #000;
+  padding-bottom: 3px; }
+
+#title {
+  border-bottom: 2px solid #D6C171; }
+
+#vis-2-title {
+  border-bottom: 2px solid #A34846; }
+
+#vis-3-title {
+  border-bottom: 2px solid #467DA3;
+  margin-left: 30px;
+  }
+
+.ctnt-txt-ctnr {
+  width: 50%;
+  margin: 0 25% 0 25%;
+  text-align: left; }
+
+.actual-data-vis {
+  width: 70%;
+  height: 300px;
+  margin: 10 px 15% 0 15%; 
+  z-index: 0; }
+
+.content-text {
+  font-size: 17px;
+  line-height: 26px;
+  font-weight: 400;
+  font-style: normal;
+  font-family: georgia, "times new roman", times, serif;
+  color: #333;
+  /*text-align: center;*/
+}
+
+em {
+  text-decoration: underline; }
+
+/*# sourceMappingURL=main-style.css.map */
+/*new css code*/
+figure {
+    display: inline-block;
+    border: 1px dotted gray;
+    margin: 20px; /* adjust as needed */
+}
+figure img {
+    vertical-align: top;
+}
+figure figcaption {
+    border: 1px dotted blue;
+    text-align: center;
+}
+.subsection-header {
+  font-size: 18pt;
+  font-weight: 400;
+  border-bottom: 2px solid #A34846;
+ }
+ .circle-img {
+  border-radius: 50%;
+  max-width: 45px;
+  max-height: 45px;
+  transform: translate(25%, 25%); }
+  .col-1, .col-2 {
+  max-width: 45%;
+  margin: auto 5% auto auto; }
+  .member{
+	  margin-left: 45px;
+	  margin-top: 20px;
+  }
+
 
